src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_TextUnderElement3.xaml


<cc:Custom_Clr_With_IAddChild xmlns:cc="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted" xml:space="preserve" xmlns:MappingPIGen1="clr-namespace:Avalon.Test.CoreUI.Parser;assembly=CoreTestsUntrusted">
	  	Hello world
</cc:Custom_Clr_With_IAddChild>
